@startuml
'https://plantuml.com/class-diagram

class A
class B
class C
class D

interface Interface1{
operator1():void
}
interface Interface2{

operator2():void
operator3():void

}
interface Interface3{

operator4():void
operator5():void

}

B ..|> Interface1
B ..|> Interface2
D ..|> Interface1
D ..|> Interface3

A ...> Interface1
A ...> Interface2
C ...> Interface1
C ...> Interface3


@enduml